--- a/templates/news_newsSearchView.html
+++ b/templates/news_newsSearchView.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 {% extends 'flatpages/default.html' %}
+{% load custom_tags %}
 
 {% block title %} ALL NEWS {% endblock %}
 
 {% block content %}
+
+   <form action="" method="get" align="center">
+       {{ filterset.form.as_p }}
+       <input type="submit" value="Найти" />
+   </form>
+
 {% if newss %}
     {% for news in newss %}
     <table>
@@ -24,23 +31,22 @@
 {% endif %}
 
 <div align="center">
-       {% if page_obj.has_previous %}
-       <a href="?page=1">1</a>
+   {% if page_obj.has_previous %}
+       {# Для каждой ссылки пагинации указываем обработку через новый тег #}
+       <a href="?{% url_replace page=1 %}">1</a>
        {% if page_obj.previous_page_number != 1 %}
            ...
-           <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+           <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
        {% endif %}
    {% endif %}
 
-   {# Информация о текущей странице #}
    {{ page_obj.number }}
 
-   {# Информация о следующих страницах #}
    {% if page_obj.has_next %}
-       <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+       <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
        {% if paginator.num_pages != page_obj.next_page_number %}
            ...
-           <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+           <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
        {% endif %}
    {% endif %}
 </div>
