--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -28,8 +28,8 @@
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">User Update</a></li>
+                        <li><a class="dropdown-item" href="/admin/">Admin Panel</a></li>
                         <li>
                             <hr class="dropdown-divider"/>
                         </li>
