--- a/templates/news_newsListView.html
+++ b/templates/news_newsListView.html
@@ -11,6 +11,9 @@
             Название: {{news.title}}
         </tr>
         <tr>
+            Автор: {{news.author}}
+        </tr>
+        <tr>
             Дата: {{news.dateCreation |date:'d M Y'}}
         </tr>
         <tr>
