--- a/templates/account_accountUpdateUserView.html
+++ b/templates/account_accountUpdateUserView.html
@@ -3,11 +3,15 @@
 
 <hr>
 
+{% if is_your_id == path %}
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Save">
 </form>
+{% else %}
+<h2><a href="{% url 'account_update' is_your_id %}">Вы пытаетесь изменить чужой профиль. Нажмите чтобы вернуть к изменениям своего профиля</a></h2>
+{% endif %}
 
 <hr>
 
