--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -34,6 +34,7 @@
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">User Update</a></li>
                         <li><a class="dropdown-item" href="/admin/">Admin Panel</a></li>
+                        <li><a class="dropdown-item" href="{% url 'category_lists' %}">All category</a></li>
                         <li>
                             <hr class="dropdown-divider"/>
                         </li>
