--- a/templates/news_categoriesView.html
+++ b/templates/news_categoriesView.html
@@ -14,15 +14,35 @@
 
     <table>
         <tr>
-            Название категории: <a href="{% url 'categories_list' categories.pk %}">{{categories.name}}</a>
+            Название: {{categories.title}}
+        </tr>
+        <tr>
+            Автор: {{categories.author}}
+        </tr>
+        <tr>
+            Дата: {{categories.dateCreation |date:'d M Y'}}
+        </tr>
+        <tr>
+            Превью: {{categories.text | truncatewords:20}}
+        </tr>
+        <tr>
+            Категоири: {% for category in categories.postCategory.all %} <a href="{%url 'categories_list' category.pk%}">{{category}} </a> {% endfor %}
         </tr>
     </table>
 
     {% endfor %}
 
 {% else %}
-    <h2>Нет категорий</h2>
+    <h2>Нет Новостей\Статей в это категории</h2>
 {% endif %}
+
+{% if is_not_subscriber %}
+<hr>
+<div align="center">
+    <button type='submit'><a href="{%url 'sub_category' category.pk%}">Подписаться на категорию</a></button>
+</div>
+{% endif %}
+<hr>
 
 <div align="center">
        {% if page_obj.has_previous %}
