--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load cache %}
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta name="description" content=""/>
@@ -16,6 +17,7 @@
 </head>
 <body>
 <!-- Responsive navbar-->
+{% cache 300 navbar %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="{% url 'news_list' %}">News Portal</a>
@@ -48,6 +50,7 @@
         </div>
     </div>
 </nav>
+{% endcache %}
 <!-- Page content-->
 <div class="container">
     {% block content %}
